# leetcode-solutions

./: .gitmodules
database-mysql/: Problem606.sql
leetcode-csharp/: Form1.cs  InsertionSort.cs  Problem561.cs  Problem728.cs  Problem804.cs
leetcode-csharp/Properties/: Settings.Designer.cs
leetcode-java/: README.md
leetcode-java/src/solution/: FindDisappearedNumbers.java  Problem219.java  Problem5.java  Problem617.java  Problem832.java
leetcode-java/src/tools/: Performance.java
leetcode_cpp/: CMakeLists.txt  main.cpp  problem_226.cpp  problem_557.cpp  problem_589.cpp  problem_643.cpp  problem_700.cpp  problem_88.cpp  problem_905.cpp  problem_929.cpp  problem_938.cpp  problem_965.cpp  problem_977.cpp
leetcode_cpp/data_structure/: list_node.cpp  list_node.hpp  node.hpp  node_next.hpp  tree_node.cpp  tree_node.h  tree_node.hpp
leetcode_cpp/include/: problem_1010.hpp  problem_1038.hpp  problem_105.hpp  problem_1051.hpp  problem_106.hpp  problem_107.hpp  problem_117.hpp  problem_121.hpp  problem_122.hpp  problem_1221.hpp  problem_1282.hpp  problem_1283.hpp  problem_1290.hpp  problem_13.hpp  problem_1304.hpp  problem_1305.hpp  problem_14.hpp  problem_173.hpp  problem_19.hpp  problem_203.hpp  problem_206.hpp  problem_21.hpp  problem_22.hpp  problem_226.hpp  problem_24.hpp  problem_27.hpp  problem_28.hpp  problem_33.hpp  problem_345.hpp  problem_371.hpp  problem_394.hpp  problem_494.hpp  problem_537.hpp  problem_557.hpp  problem_643.hpp  problem_700.hpp  problem_88.hpp  problem_929.hpp  problem_938.hpp  problem_977.hpp
leetcode_cpp/include/data_structure/: bst_iterator.hpp  list_node.hpp  preorder_iterator.hpp  tree_node.hpp
leetcode_cpp/include/leetcode/: problem_1010.hpp  problem_1038.hpp  problem_105.hpp  problem_1051.hpp  problem_106.hpp  problem_107.hpp  problem_117.hpp  problem_121.hpp  problem_122.hpp  problem_1221.hpp  problem_1281.hpp  problem_1282.hpp  problem_1283.hpp  problem_1290.hpp  problem_13.hpp  problem_1304.hpp  problem_1305.hpp  problem_14.hpp  problem_145.hpp  problem_160.hpp  problem_173.hpp  problem_19.hpp  problem_203.hpp  problem_206.hpp  problem_21.hpp  problem_22.hpp  problem_226.hpp  problem_24.hpp  problem_26.hpp  problem_27.hpp  problem_28.hpp  problem_297.hpp  problem_30.hpp  problem_33.hpp  problem_34.hpp  problem_344.hpp  problem_345.hpp  problem_35.hpp  problem_36.hpp  problem_371.hpp  (+25 more)
leetcode_cpp/include/util/category_theory/: compose.hpp
leetcode_cpp/include/util/generic/: accumulate.hpp  find_range.hpp  group_by.hpp  is_number.hpp  is_palindrome.hpp  reverse_if.hpp  set_equality.hpp  split.hpp  zip.hpp  zip_accumulate.hpp
leetcode_cpp/include/util/string/: split.hpp
leetcode_cpp/solutions/: problem_1010.cpp  problem_1010.hpp  problem_105.cpp  problem_1051.cpp  problem_1051.hpp  problem_106.cpp  problem_107.cpp  problem_117.cpp  problem_1281.cpp  problem_1282.cpp  problem_1283.cpp  problem_1290.cpp  problem_145.cpp  problem_145.hpp  problem_160.cpp  problem_206.cpp  problem_226.cpp  problem_226.hpp  problem_297.cpp  problem_371.cpp  problem_394.cpp  problem_4.cpp  problem_494.cpp  problem_535.cpp  problem_536.cpp  problem_537.cpp  problem_557.cpp  problem_557.hpp  problem_589.cpp  problem_589.hpp  problem_643.cpp  problem_643.hpp  problem_700.cpp  problem_700.hpp  problem_88.cpp  problem_88.hpp  problem_888.cpp  problem_888.hpp  problem_889.cpp  problem_905.cpp  (+9 more)
leetcode_cpp/src/leetcode/: problem_1010.cpp  problem_1038.cpp  problem_105.cpp  problem_106.cpp  problem_107.cpp  problem_117.cpp  problem_1290.cpp  problem_1305.cpp  problem_145.cpp  problem_160.cpp  problem_173.cpp  problem_19.cpp  problem_203.cpp  problem_206.cpp  problem_21.cpp  problem_22.cpp  problem_226.cpp  problem_24.cpp  problem_297.cpp  problem_30.cpp  problem_345.cpp  problem_36.cpp  problem_5316.cpp  problem_5319.cpp  problem_535.cpp  problem_536.cpp  problem_537.cpp  problem_557.cpp  problem_589.cpp  problem_700.cpp  problem_889.cpp  problem_897.cpp  problem_938.cpp
leetcode_cpp/src/util/category_theory/: compose.cpp
leetcode_cpp/src/util/generic/: accumulate.cpp  bst_iterator.cpp  find_range.cpp  group_by.cpp  is_number.cpp  is_palindrome.cpp  preorder_iterator.cpp  reverse_if.cpp  set_equality.cpp  split.cpp  zip.cpp  zip_accumulate.cpp
leetcode_cpp/src/util/string/: split.cpp
leetcode_cpp/tests/: problem_1010.cpp  problem_1038.cpp  problem_105.cpp  problem_1051.cpp  problem_106.cpp  problem_107.cpp  problem_117.cpp  problem_121.cpp  problem_122.cpp  problem_1221.cpp  problem_1281.cpp  problem_1282.cpp  problem_1283.cpp  problem_1290.cpp  problem_13.cpp  problem_1304.cpp  problem_1305.cpp  problem_14.cpp  problem_145.cpp  problem_160.cpp  problem_173.cpp  problem_19.cpp  problem_203.cpp  problem_206.cpp  problem_21.cpp  problem_22.cpp  problem_226.cpp  problem_24.cpp  problem_26.cpp  problem_27.cpp  problem_28.cpp  problem_297.cpp  problem_33.cpp  problem_344.cpp  problem_345.cpp  problem_371.cpp  problem_394.cpp  problem_4.cpp  problem_494.cpp  problem_535.cpp  (+15 more)
leetcode_cpp/util/: string_util.cpp  string_util.h  string_util.hpp
leetcode_cpp/util/generic/: find_range.cpp  find_range.hpp  group_by.cpp  group_by.hpp  is_integer.cpp  is_integer.hpp  is_number.cpp  is_number.hpp  reverse_if.cpp  reverse_if.hpp  split.cpp  split.hpp  zip.cpp  zip.hpp
leetcode_cpp/util/string/: split.cpp  split.hpp
leetcode_csharp/: Form1.Designer.cs  LeetCodeSolutions.cs  Problem771.cs  Program.cs  SelectionSort.cs  Tools.cs
leetcode_csharp/Properties/: AssemblyInfo.cs  Resources.Designer.cs
leetcode_java/src/tools/: Tools.java
leetcode_python/: .gitignore
leetcode_python/src/: problem_145_test.py  problem_15_test.py  problem_18_test.py  problem_236_test.py  problem_416_test.py
leetcode_rust/: .gitignore  Cargo.toml
leetcode_rust/src/: lib.rs  problem_1021.rs  problem_1025.rs  problem_1108.rs  problem_13.rs  problem_15.rs  problem_16.rs  problem_218.rs  problem_322.rs  problem_343.rs  problem_392.rs  problem_416.rs  problem_5.rs  problem_6.rs  problem_7.rs  problem_71.rs  problem_8.rs  problem_9.rs  problem_904.rs  problem_922.rs  problem_96.rs
(+19 files in other folders)
